fix: fix agents uploads bugs

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#fff" />
+		<meta name="theme-color" content="#008080" />
 		<meta
 			name="description"
-			content="Food Crowdy Agents , Earn 25%  profit for every deals | offers"
+			content="Bulk Buy and Save Big,Food Crowdy Buy more spend less same great quality Smart buyer"
 		/>
-		<meta content="Food Crowdy" name="application-name" />
+		<meta content="Food Crowdy" name="application-name">
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>Food Crowdy | Agents </title>
+		<title>Food Crowdy</title>
 		<style>
 			.full-page-loader {
 				background-color: #fff;
