fix: correct index file manifest icons

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,11 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#008080" />
-		<meta
-			name="description"
-			content="Bulk Buy and Save Big,Food Crowdy Buy more spend less same great quality Smart buyer"
-		/>
-		<meta content="Food Crowdy" name="application-name">
+		<meta name="description" content="Food Crowdy Agent Dashboard" />
+		<meta content="Food Crowdy" name="application-name" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>Food Crowdy</title>
+		<title>Food Crowdy | Agent</title>
 		<style>
 			.full-page-loader {
 				background-color: #fff;
